[gd_scene load_steps=2 format=3 uid="uid://defrgubwob3ox"]

[ext_resource type="Script" path="res://ui/menus/parameters/test.gd" id="1_83j5f"]

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83j5f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OS" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "OS"

[node name="DisplayServer" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
text = "DisplayServer"
item_count = 3
popup/item_0/text = "1920 x 1080"
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "ah............"
popup/item_1/id = 1
popup/item_2/text = "44444"
popup/item_2/id = 2

[node name="ProjectSettings" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "ProjectSettings"

[connection signal="toggled" from="VBoxContainer/OS" to="." method="_on_os_toggled"]
[connection signal="toggled" from="VBoxContainer/ProjectSettings" to="." method="_on_project_settings_toggled"]
